# lib

./: README.md  pyproject.toml
.github/workflows/: continuous-deployment.yml
graphs2go/: buffering_rdf_loader.py  directory_loader.py  rdf_directory_loader.py  rdf_format.py  rdf_graph_record.py  rdf_loader.py  record.py
graphs2go/assets/: __init__.py  build_cypher_files_asset.py  build_direct_rdf_file_asset.py  build_interchange_dataset_asset.py  build_interchange_file_asset.py  build_postgres_database_asset.py  build_skos_file_asset.py  build_skos_files_asset.py  build_skos_graph_asset.py  rdf_file_asset_defaults.py  skos_graph.py
graphs2go/loaders/: buffering_rdf_loader.py  cypher_directory_loader.py  interchange_graph_loader.py  rdf_directory_loader.py  rdf_graph_record.py  rdf_loader.py
graphs2go/models/: compression_method.py  loadable_rdf_graph.py  persistent_rdf_graph.py  postgres_database.py  postgres_schema.py  postgres_table.py  postgres_tables.py  rdf_graph_record.py  rdf_model.py  rdf_resource_backed_model.py
graphs2go/models/cypher/: __init__.py  create_node_statement.py  create_relationship_statement.py  mapping.py  node_pattern.py  properties.py  property_value.py  statement.py
graphs2go/models/interchange/: __init__.py  concept.py  dataset.py  graph.py  graph_descriptor.py  label.py  model.py  node.py  property.py  relationship.py  statement.py
graphs2go/models/postgres/: __init__.py
graphs2go/models/rdf/: __init__.py  format.py  graph.py  model.py  named_model.py  named_resource.py  resource.py
graphs2go/models/skos/: __init__.py  concept.py  concept_scheme.py  graph.py  label.py  labeled_model.py  model.py
graphs2go/namespaces/: __init__.py  bind_namespaces.py  interchange.py  namespaces.py  snomed_schema.py  snomed_vocab.py  vaem.py  voag.py
graphs2go/rdf_stores/: memory_rdf_store.py  oxigraph_rdf_store.py  rdf_store.py
graphs2go/resources/: __init__.py  interchange_config.py  output_config.py  oxigraph_config.py  postgres_config.py  postgres_connection_pool.py  rdf_store_config.py
graphs2go/transformers/: parallel_transform.py  transform_interchange_graph.py  transform_interchange_graph_to_cypher_statements.py  transform_interchange_graph_to_direct_rdf_models.py  transform_interchange_graph_to_skos_models.py
graphs2go/utils/: __init__.py  brotli_file.py  configure_markus.py  find_directory_releases.py  find_releases.py  hash_urn.py  load_dotenv.py  resource_builder.py
script/: format  test
tests/graphs2go_tests/: conftest.py
tests/graphs2go_tests/loaders/: buffering_rdf_loader_test.py  conftest.py  cypher_directory_loader_test.py  rdf_directory_loader_test.py
tests/graphs2go_tests/utils/: brotli_file_test.py
tests/loaders_test/: buffering_rdf_loader_test.py  conftest.py  rdf_directory_loader_test.py
(+16 files in other folders)
