[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.dagster]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true

[tool.poetry]
name = "graphs2go"
version = "0.1.0"
description = ""
authors = ["Minor Gordon <minorg@server.fake>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
rdflib = "^7.0.0"
pathvalidate = "^3.2.0"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
mypy = "^1.8.0"
pytest = "^8.0.1"
ruff = "^0.2.2"

[tool.ruff]
src = ["graphs2go"]
target-version = "py311"

[tool.ruff.lint]
ignore = [
    "ANN101", # missing-type-self
    "ANN102", # missing-type-cls,
    "ANN204", # Missing return type annotation for __init__
    "COM812", # Trailing comma missing
    "D",      # Missing docstrings
    "E501",   # Line too long
    "EM102",  # Exception must not use an f-string literal
    "ERA001", # Commented-out code
    "FA",     # Missing from __future__ import annotations
    "FIX002", # Line contains TODO
    "I001",   # Import block is un-sorted or un-formatted
    "ICN001", # Pandas should be imported as pd
    "N815",   # Mixed-case variables
    "PGH003", # Use specific rule codes when ignoring type issues
    "S101",   # assert
    "TD002",  # Missing author in TODO
    "TD003",  # Missing issue link on the line following TODO
    "TRY003", # Avoid specifying long messages outside the exception class
]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.isort]
known-first-party = ["graphs2go"]
