[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.dagster]

[tool.poetry]
name = "graphs2go"
version = "0.1.0"
description = ""
authors = ["Minor Gordon <minorg@server.fake>"]
readme = "README.md"

[tool.poetry.dependencies]
dagster = "^1.6.5"
pathvalidate = "^3.2.0"
psycopg = "^3.1.18"
python = "^3.11"
rdflib = "^7.0.0"
tqdm = "^4.66.2"
types-tqdm = "^4.66.0.20240106"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
mypy = "^1.8.0"
pytest = "^8.0.1"
ruff = "^0.2.2"
isort = "^5.13.2"

[tool.ruff]
src = ["graphs2go"]
